# NRMC2018

./: .gitattributes  .gitignore  .gitmodules  README.md  before.txt  can_bringup2018.sh  env.bash  install_apriltags_prereqs.sh  lintallbeall.sh  network.sh  octave-workspace  shutdownscript.bash  zero_point_jjoint_states.csv  zero_pt_turn_loaded.csv
src/controls/backhoe_control/: CMakeLists.txt  Requirements.txt  package.xml
src/controls/backhoe_control/src/: central_drive_server.cpp
src/controls/dig_control/: CMakeLists.txt  package.xml
src/controls/dig_control/action/: Dig.action  Dump.action  Outrigger.action
src/controls/dig_control/launch/: dig_master.launch  dig_teleop.launch  outrigger_master.launch  outrigger_tester.launch  sim_outrigger_master.launch
src/controls/dig_control/src/: central_drive_client.cpp  central_drive_server.cpp  dig_teleop.cpp  dig_teleop_by_hand.cpp  hoe_master.cpp  outrigger_master.cpp  real_dig_teleop.cpp
src/controls/new_sim/: CMakeLists.txt
src/controls/new_sim/src/: sim_backhoe.cpp  sim_imu.cpp  sim_outriggers.cpp  sim_vesc.cpp
src/controls/robot_control/: CMakeLists.txt  package.xml
src/controls/teleop_skid_steer/: CMakeLists.txt  package.xml
src/controls/teleop_skid_steer/launch/: demo.launch  teleop_joy.launch  teleop_skid_steer.launch  teleop_skid_steer_controller.launch
src/controls/teleop_skid_steer/src/: teleop.cpp
src/controls/wheel_control/: CMakeLists.txt  Requirements.txt  SkidSteerPlugins.xml  package.xml  wheel_control_plugins.xml
src/controls/wheel_control/action/: distance.action  waypoint.action
src/controls/wheel_control/include/: BasicSkidSteer.h  Interface.h  SkidSteerInterface.h  TwoAxisVelocityControl.h  Wheels.h
src/controls/wheel_control/launch/: pose_array_publisher.launch  position_controller.launch  sim_waypoint_controller.launch  waypoint_controller.launch  waypoint_filter.launch
src/controls/wheel_control/msg/: waypoint.msg
src/controls/wheel_control/scripts/: goal_translator.py  position_spoofer.py  rqtgraph1.sh  rqtgraph2.sh
src/controls/wheel_control/src/: BasicSkidSteer.cpp  DifferentialDriveController.cpp  TwoAxisVelocityController.cpp  VescSocketCAN.cpp  Wheels.cpp  reqs  super_waypoint_master.cpp  waypoint_filter.cpp  waypoint_master.cpp  wheel_goal_master.cpp
src/description/: .gitattributes  CMakeLists.txt  package.xml
src/description/config/: arena.rviz
src/description/launch/: display.launch  display_and_load.launch  display_min.launch  display_robot.launch  load_robot_and_arena.launch  rviz.launch  test_urdf.launch
src/description/math/: ThetaConversion.mlx  backhoe_bucket_couple.m  backhoe_bucket_mapping.csv  linear_actuator_backhoe_couple.m  linear_actuator_to_backhoe_mapping.csv
src/description/meshes/: .gitattributes  arena.dae  backhoe_bucket.stl  box.stl  bucket.stl  camera.stl  camera_mount.stl  central_drive.stl  frame.stl  left_dynamixel.stl  monoboom.stl  right_dynamixel.stl  wheel.stl  zr300_dynamixel.stl  zr300_mount.stl  zr300_mount_2.stl
src/description/scenes/: arena.ttt  arena_export.ttt  arena_with_vision_sensor.ttt  emydidae.ttt
src/description/src/: backhoe_bucket_mapping.cpp  backhoe_mapping.csv  joint_mappings.cpp  tag_location_publisher.cpp
src/description/urdf/: arena.urdf  robot.urdf
src/description/vrep_models/: .gitattributes  arena.ttm  arena_with_floor.ttm  emydidae.ttm  emydidae_with_vision_sensors.ttm  rock_01.ttm  rock_02.ttm  rock_03.ttm  rock_04.ttm  rock_05.ttm  rock_06.ttm  rock_07.ttm  rock_08.ttm  rock_09.ttm  rock_1.ttm  rock_10.ttm  rock_11.ttm  rock_12.ttm  rock_13.ttm  rock_2.ttm  rock_3.ttm  rock_4.ttm
src/hardware_layer/sensor_access/: CMakeLists.txt  package.xml
src/hardware_layer/sensor_access/launch/: apriltag_integration_test.launch  lpresearch_integration_test.launch  pos_sensors_integration_test.launch
src/hardware_layer/sensor_access/tests/: apriltag_integration.cpp  lpresearchtest.cpp
src/hardware_layer/vesc_access/: CMakeLists.txt  package.xml
src/hardware_layer/vesc_access/launch/: linear_test.launch
src/hardware_layer/vesc_access/test/: linear_integration_test.cpp  vesc_access_integration_test.cpp  vesc_access_pot_limit_test.cpp  vesc_runtime_check.cpp  vesc_socket_can_integration_test.cpp  vesc_socket_pot_test.cpp
src/imperio/: CMakeLists.txt  README.md  package.xml
src/imperio/data/: costmap.yaml  occupancygrid.py
src/imperio/imperio/: CMakeLists.txt  package.xml
src/imperio/imperio/doc/: README.md
src/imperio/imperio/launch/: imperio.launch  imperio_turtlebot_launch.launch
src/imperio/include/: roboticsDashboard.perspective
src/imperio/launch/: imperio.launch  imperio_testing_jacob.launch  minimal_testing.launch  sim_testing_imperio.launch  testing_imperio.launch  turtlebot.launch  unit_testing.launch  visualization_testing.launch  with_timer_testing.launch
src/imperio/msg/: DriveStatus.msg  GlobalWaypoints.msg
src/imperio/scripts/: RRT.py  astar.py  base_movement.py  buttons.py  competition_timer.py  control_switch.py  dashboardLaunch.bash  global_planner.py  harcoded_paths.py  how_to_test.txt  imperio.py  imperio_control.py  initial_planner.py  local_planner.py  map_utils.py  ndsu_robot.py  path_vis.py  planner.py  regolith_manipulation.py  robot.py  robot_integration_test.py  simulation_ndsu_robot.py  test_imperio.py  turtlebot_robot.py  visualization.py
src/integration_tests/can_sensors_integration_test/: CMakeLists.txt  package.xml
src/localization/: CMakeLists.txt  Requirements.txt  package.xml
src/localization/launch/: can_sensors_integration_test.launch  localization_test.launch
src/localization/src/: requirements.txt
src/localization/tests/: localization_test.cpp
src/navigation/localization/: CMakeLists.txt  package.xml
src/navigation/mapping/: CMakeLists.txt  hole_plug.xml  lowpass_plug.xml  package.xml
src/new_sim/: CMakeLists.txt  package.xml
src/new_sim/include/: sim_imu.h  sim_pos.h  sim_robot.h  sim_vesc.h
src/new_sim/src/: sim_backhoe.cpp  sim_bucket.cpp  sim_imu.cpp  sim_outriggers.cpp  sim_pos.cpp  sim_robot.cpp  sim_vesc.cpp
(+311 files in other folders)
